feat: add write-offs (#7)
