# server/src/controllers/payoutController.ts
@@ -3,7 +3,6 @@ import { FileSettings, prepareFileResponse } from '../helpers/fileManager';
 import { ApiError, HTTPStatus, InternalError, ValidateErrorJSON } from '../helpers/customError';
 import PayoutService, { PayoutParameters, SellerPayoutParameters } from '../services/payoutService';
 
-
 export interface PayoutRouteParams {
   params: PayoutParameters;
   settings: FileSettings;
@@ -26,13 +25,8 @@ export class PayoutController extends Controller {
   @Response<ValidateErrorJSON>(422, 'Validation Failed')
   @Response<InternalError>(500, 'Internal Server Error')
   @SuccessResponse(200, 'Ok')
-  public async generatePayout(
-    @Body() params: PayoutRouteParams
-  ): Promise<any> {
-    let fileName: string = await new PayoutService().generatePayout(
-      params.settings,
-      params.params,
-    );
+  public async generatePayout(@Body() params: PayoutRouteParams): Promise<any> {
+    let fileName: string = await new PayoutService().generatePayout(params.settings, params.params);
     if (fileName === undefined)
       throw new ApiError(
         HTTPStatus.InternalServerError,
@@ -45,12 +39,10 @@ export class PayoutController extends Controller {
   @Response<ValidateErrorJSON>(422, 'Validation Failed')
   @Response<InternalError>(500, 'Internal Server Error')
   @SuccessResponse(200, 'Ok')
-  public async generateDisbursement(
-    @Body() params: SellerPayoutRouteParams
-  ): Promise<any> {
+  public async generateDisbursement(@Body() params: SellerPayoutRouteParams): Promise<any> {
     let fileName: string = await new PayoutService().generateDisbursement(
       params.settings,
-      params.params,
+      params.params
     );
     if (fileName === undefined)
       throw new ApiError(
